# qm9-egnn-tda

./: .gitignore  README.md  README2.md  pyproject.toml  pyvenv.cfg
notebooks/: qm9_egnn_tda.ipynb
results/: baseline_metrics.json  baseline_robustness.csv  compare_metrics.json  compare_robustness.csv  compare_table.csv  fusion_summary.csv  fusion_train_history.json  tda_h1_nonzero_rate.txt
scripts/: build_tda_cache.py  tda_visualize.py
src/: eval.py  train.py  train_fusion.py
src/data/: collate.py  indexed_dataset.py  qm9_data.py  tda_features.py
src/models/: egnn_gap.py  fusion_gap.py
src/utils/: exp_logging.py  io.py  metrics.py  seed.py
